@@ -1,5 +1,5 @@
 AUX x264-nostrip.patch 433 RMD160 81c3893b1a02839da38f34484c794996855fab5e SHA1 42c0807d6f2f13f848409d9545994c8b66338c8c SHA256 1210914cc52de908b840775ab8e4a107d95aeced690c2f115320d31e587a2ffa
 AUX x264-onlylib-20100605.patch 1078 RMD160 a40e8e298cef462b2c1a393d56184c84a901eb28 SHA1 085e8c16226ad9bb1cfb7efe6065cd80a7c2f358 SHA256 557c818204143440b982bae758103898078d014d145176267329d368b2b44fa4
-EBUILD x264-9999.ebuild 1218 RMD160 cf3c7558d46c552184b2b8490b4b29735ef2b71f SHA1 03f5952ca5373bff913e2e89711d1d7b9ed5f358 SHA256 d94f51c00e48c91f29cb2248f2322cd0fa907a329981ba5a95327aa63bb4ab16
-MISC ChangeLog 250 RMD160 9396a2bdf042ebc87e01a55b47484a211ed3f798 SHA1 7ced1449bfafa08b5a5c360d65cefab4078922af SHA256 f71ee3ed137d5d916703de2d8961ce17766fb28737e793e072d7a754e295e5ad
+EBUILD x264-9999.ebuild 1734 RMD160 81923e6151d4973a6fe7b23370765be237b20342 SHA1 baa3d1c60d6994ba78e683433e0fcd8dc3d44e6d SHA256 14eed4970f274965ae2a36127779f897e901cdfb2e27636e6ee0ffb411357392
+MISC ChangeLog 332 RMD160 175df43cb85de5097813b0395f798785cff9f814 SHA1 7514936c88fa36bd87655a221e1f6e6c55a76d6c SHA256 c7a6b5bc98d45545a1ea3ca231e92ef08a645de26194ed6c562b579529f01f4e
 MISC metadata.xml 335 RMD160 782d171712950050c9e34479cedef18983e566e9 SHA1 68e8b7034a5abef5f25463e194936c8d4a837f72 SHA256 18b919bb52e6713ae3919ba49f66caa659304337339e6d317e95d04a6384d23c
