@@ -2,28 +2,49 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="2"
+EAPI=2
 
-inherit eutils multilib toolchain-funcs git
+V_ECLASS=""
+if [ "${PV#9999}" != "${PV}" ] ; then
+	V_ECLASS="git"
+else
+	V_ECLASS="versionator"
+fi
 
+inherit eutils multilib toolchain-funcs ${V_ECLASS}
+
+if [ "${PV#9999}" = "${PV}" ] ; then
+	MY_P="x264-snapshot-$(get_version_component_range 3)-2245"
+fi
 DESCRIPTION="A free library for encoding X264/AVC streams"
 HOMEPAGE="http://www.videolan.org/developers/x264.html"
-EGIT_REPO_URI="git://git.videolan.org/x264.git"
+if [ "${PV#9999}" != "${PV}" ] ; then
+	EGIT_REPO_URI="git://git.videolan.org/x264.git"
+else
+	SRC_URI="http://ftp.videolan.org/pub/videolan/x264/snapshots/${MY_P}.tar.bz2"
+fi
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS=""
+if [ "${PV#9999}" = "${PV}" ] ; then
+	KEYWORDS="~alpha ~amd64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+fi
 IUSE="debug +threads pic"
 
 RDEPEND=""
 ASM_DEP=">=dev-lang/yasm-0.6.2"
-DEPEND="amd64? ( ${ASM_DEP} )
+DEPEND="
+	amd64? ( ${ASM_DEP} )
 	x86? ( ${ASM_DEP} )
-	x86-fbsd? ( ${ASM_DEP} )"
+	x86-fbsd? ( ${ASM_DEP} )
+"
+if [ "${PV#9999}" = "${PV}" ] ; then
+	S=${WORKDIR}/${MY_P}
+fi
 
 src_prepare() {
-	epatch "${FILESDIR}/${PN}-nostrip.patch" \
-		"${FILESDIR}/${PN}-onlylib-20100605.patch"
+	epatch "${FILESDIR}"/${PN}-nostrip.patch \
+		"${FILESDIR}"/${PN}-onlylib-20100605.patch
 }
 
 src_configure() {
@@ -41,6 +62,7 @@ src_configure() {
 		--libdir=/usr/$(get_libdir) \
 		--disable-avs \
 		--disable-lavf \
+		--disable-swscale \
 		--disable-ffms \
 		--disable-gpac \
 		$(use_enable threads pthread) \
@@ -50,7 +72,8 @@ src_configure() {
 		--extra-cflags="${CFLAGS}" \
 		--extra-ldflags="${LDFLAGS}" \
 		--host="${CHOST}" \
-		${myconf} || die
+		${myconf} \
+		|| die
 }
 
 src_install() {
